# teasel

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
drivers/lecroy-wavesurfer/: pyproject.toml
drivers/lecroy-wavesurfer/src/lecroy_wavesurfer_driver/: driver.py  oscilloscope.py
drivers/pm5190/: pyproject.toml
drivers/pm5190/src/pm5190_driver/: driver.py  instrument.py
src/teasel/: cli.py  config.py  models.py  registry.py  tui.py  wizard.py
teasel-cli/: README.md  pyproject.toml
teasel-cli/src/teasel/: __init__.py  cli.py  config.py  registry.py  state.py  teasel.tcss  tui.py  web.py
teasel-server/: README.md  pyproject.toml
teasel-server/src/teasel_server/: base.py  output.py  server.py
teasel-server/src/teasel_server/instruments/lecroy_wavesurfer/: driver.py
teasel-server/src/teasel_server/instruments/pm5190/: driver.py
