[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teasel"
version = "0.2.1"
description = "Connect lab instruments to AI assistants"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "textual>=0.70",
]

[project.scripts]
teasel = "teasel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teasel"]
