[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teasel"
version = "0.2.16"
description = "Connect lab instruments to AI assistants"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "textual>=0.70",
    "pyserial>=3.5",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
]

[project.scripts]
teasel = "teasel.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teasel"]
