[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teasel-server"
version = "0.1.0"
description = "Unified MCP server for lab instruments"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
]

[project.scripts]
teasel-server = "teasel_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/teasel_server"]
