[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "teasel-server"
version = "0.1.5"
description = "Unified MCP server for lab instruments"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.27.0",
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "pyserial>=3.5",
]

[project.scripts]
teasel-server = "teasel_server.server:main"

[project.entry-points."teasel.instruments"]
lecroy-wavesurfer = "teasel_server.instruments.lecroy_wavesurfer.driver:LecroyWaveSurferDriver"
pm5190 = "teasel_server.instruments.pm5190.driver:PM5190Driver"

[tool.hatch.build.targets.wheel]
packages = ["src/teasel_server"]
