[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lecroy-wavesurfer-driver"
version = "0.1.0"
description = "teasel driver for LeCroy WaveSurfer oscilloscopes via SCPI/VXI-11"
requires-python = ">=3.11"
dependencies = [
    "teasel-server>=0.1.0",
    "pyvisa>=1.13.0",
    "pyvisa-py>=0.7.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
]

[project.entry-points."teasel.instruments"]
lecroy-wavesurfer = "lecroy_wavesurfer_driver.driver:LecroyWaveSurferDriver"

[tool.hatch.build.targets.wheel]
packages = ["src/lecroy_wavesurfer_driver"]
