[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm5190-driver"
version = "0.1.0"
description = "teasel driver for the Philips PM5190 LF synthesizer via AR488 serial-to-GPIB"
requires-python = ">=3.11"
dependencies = [
    "teasel-server>=0.1.0",
    "pyserial>=3.5",
]

[project.entry-points."teasel.instruments"]
pm5190 = "pm5190_driver.driver:PM5190Driver"

[tool.hatch.build.targets.wheel]
packages = ["src/pm5190_driver"]
